@@ -82,6 +82,8 @@ public final class JpmsUtils {
       "--add-exports=com.mulesoft.mule.boot/org.mule.runtime.module.reboot=ALL-UNNAMED";
   private static final String REQUIRED_ADD_OPENS_JAVA_LANG =
       "--add-opens=java.base/java.lang=org.mule.runtime.jpms.utils";
+  private static final String REQUIRED_ADD_OPENS_JAVA_LANG_REFLECT =
+      "--add-opens=java.base/java.lang.reflect=org.mule.runtime.jpms.utils";
   private static final String REQUIRED_ADD_OPENS_JAVA_SECURITY_CERT =
       "--add-opens=java.base/java.security.cert=org.mule.runtime.jpms.utils";
 
@@ -116,6 +118,7 @@ public final class JpmsUtils {
             || arg.equals(REQUIRED_CE_BOOT_ADD_EXPORTS)
             || arg.equals(REQUIRED_BOOT_ADD_EXPORTS)
             || arg.equals(REQUIRED_ADD_OPENS_JAVA_LANG)
+            || arg.equals(REQUIRED_ADD_OPENS_JAVA_LANG_REFLECT)
             || arg.equals(REQUIRED_ADD_OPENS_JAVA_SECURITY_CERT)))
         .collect(toList());
 
@@ -184,7 +187,8 @@ public final class JpmsUtils {
 
     final ModuleLayer parentLayer = createModuleLayer(modulePathEntriesParent, parent, empty(), false, true);
     final ModuleLayer childLayer = createModuleLayer(modulePathEntriesChild, parent, of(parentLayer), false, true);
-    openToModule(childLayer, "kryo.shaded", "java.base", asList("java.lang", "java.security.cert"));
+    openToModule(childLayer, "kryo.shaded", "java.base", asList("java.lang", "java.lang.reflect", "java.security.cert"));
+    openToModule(childLayer, "kryo.shaded", "jakarta.activation", asList("javax.activation"));
 
     return childLayer.findLoader(childLayer.modules().iterator().next().getName());
   }
@@ -350,12 +354,12 @@ public final class JpmsUtils {
 
     layer.findModule(moduleName)
         .ifPresent(module -> {
-          Module bootModule = ModuleLayer.boot()
-              .findModule(bootModuleName).get();
-
-          for (String pkg : packages) {
-            bootModule.addOpens(pkg, module);
-          }
+          boot().findModule(bootModuleName)
+              .ifPresent(bootModule -> {
+                for (String pkg : packages) {
+                  bootModule.addOpens(pkg, module);
+                }
+              });
         });
   }
 
